--- a/src/style.css
+++ b/src/style.css
@@ -5,5 +5,11 @@ body {
   border-radius: 30px;
 }
 .navbar-light {
-  background-color: #810ca8;
+  background-color: linear-gradient(0.25turn, #2d033b, #3f0071, #2d033b);
+}
+.nav-link {
+  color: white;
+}
+.navbar-brand {
+  color: white;
 }
