--- a/src/style.css
+++ b/src/style.css
@@ -12,12 +12,17 @@ body {
 h1 {
   text-align: center;
   margin-top: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
   font-family: "Exo", sans-serif;
   font-family: "Montserrat", sans-serif;
   font-family: "Quicksand", sans-serif;
   font-family: "Solitreo", cursive;
   font-size: 50px;
+}
+h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  margin-top: 0px;
 }
 .menu {
   display: flex;
@@ -91,8 +96,8 @@ a {
 /* About */
 .cut-pic {
   position: relative;
-  top: -150px;
-  right: 100px;
+  top: -230px;
+  right: 60px;
 }
 
 @media (max-width: 500px) {
