--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
   --box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
 }
 body {
-  background: #53076d;
+  background: #250331;
   color: white;
   font-family: "Montserrat", sans-serif;
   margin-top: 30px;
@@ -107,6 +107,9 @@ a {
 iframe {
   display: block;
   margin: 0 auto;
+}
+.about-text {
+  line-height: 1.8;
 }
 @media (max-width: 500px) {
   .menu {
