Made about page more responsive

--- a/src/style.css
+++ b/src/style.css
@@ -127,6 +127,13 @@ iframe {
   hr {
     width: 230px;
   }
+  iframe {
+    width: 260px;
+    height: 180px;
+  }
+  .about-pic {
+    width: 80px;
+  }
 }
 @media (max-width: 900px) {
   .cut-pic {
