--- a/src/style.css
+++ b/src/style.css
@@ -24,15 +24,16 @@ h3 {
   margin-bottom: 10px;
   margin-top: 0px;
 }
+.head {
+  background-color: #683b63;
+  padding: 20px;
+}
 .menu {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 50px;
 }
-.head {
-  background-color: #683b63;
-  padding: 20px;
-}
+
 .nav-link {
   border: solid 1.5px white;
   border-radius: 5px 20px 5px;
@@ -63,6 +64,34 @@ a {
 .card-img-top {
   border-radius: 30px;
   width: 250px;
+  display: block;
+  margin: 0 auto;
+}
+.card-title {
+  text-align: center;
+}
+.card-title a {
+  color: #ffffff;
+  opacity: 0.5;
+  text-decoration: none;
+}
+
+.card-text {
+  text-align: center;
+}
+#project-button {
+  background-color: #ffff;
+  color: var(--primary-color);
+  font-weight: bold;
+  border: var(--primary-color);
+  box-shadow: var(--box-shadow);
+  display: block;
+}
+#project-button:hover {
+  background-color: var(--primary-color);
+  color: #ffffff;
+  transition: all 100ms linear/ease-in-out;
+  border-color: #ffffff;
 }
 /* Education */
 .university,
@@ -118,6 +147,12 @@ iframe {
   line-height: 1.8;
 }
 @media (max-width: 500px) {
+  h1 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 13px;
+  }
   .menu {
     flex-direction: column;
   }
@@ -134,9 +169,16 @@ iframe {
   .about-pic {
     width: 80px;
   }
+  .cards {
+    display: block;
+    margin: 0 auto;
+  }
 }
 @media (max-width: 900px) {
   .cut-pic {
     display: none;
   }
+}
+footer {
+  color: #fa46be;
 }
