--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 }
 body {
   margin-top: 20px;
-  background: #ffffff;
+  background: #d8d8d8;
   color: white;
   font-family: "Montserrat", sans-serif;
 }
@@ -36,13 +36,19 @@ h3 {
 }
 
 .nav-link {
-  border: solid 1.5px white;
   border-radius: 5px 20px 5px;
   text-align: center;
   color: white;
   box-shadow: var(--box-shadow);
   background-color: var(--primary-color);
   padding: 5px 20px;
+}
+.nav-link:hover {
+  background-color: #ffffff;
+  border: var(--primary-color);
+  color: var(--primary-color);
+  border-color: var(--primary-color);
+  transition: all 100ms linear/ease-in-out;
 }
 hr {
   width: 450px;
@@ -170,5 +176,9 @@ iframe {
   }
 }
 footer {
-  color: #fa46be;
+  color: #ffffff;
+  background-color: var(--primary-color);
+}
+footer a:hover {
+  color: #ffffff;
 }
