--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 }
 body {
   margin-top: 20px;
-  background: #d8d8d8;
+  background: #f0eeee;
   color: white;
   font-family: "Montserrat", sans-serif;
 }
@@ -88,7 +88,9 @@ a {
   text-align: center;
   color: var(--main-text-color);
 }
-
+.figma-project {
+  border-radius: 30px;
+}
 /* Education */
 .university,
 .courses {
@@ -108,6 +110,7 @@ a {
 .course-name {
   font-size: 22px;
   margin-bottom: 5px;
+  margin-top: 5px;
 }
 .degree,
 .content {
@@ -115,11 +118,35 @@ a {
 }
 .years {
   font-size: 12px;
+  margin-bottom: 10px;
 }
-.shecodes-links {
+.project-link {
+  color: #ffffff;
+  text-decoration: none;
+  margin: 10px;
+  border: solid 1px var(--primary-color);
+  padding: 5px;
+  border-radius: 7px;
+  background-color: var(--primary-color);
+}
+.certificate-link {
   color: #b368ab;
   text-decoration: none;
   margin: 10px;
+  border: solid 1px var(--primary-color);
+  padding: 5px;
+  border-radius: 7px;
+  background-color: #ffffff;
+}
+.project-link:hover {
+  background-color: #8f5188;
+  color: #ffffff;
+  transition: all 100ms linear/ease-in-out;
+}
+.certificate-link:hover {
+  background-color: #8f5188;
+  color: #ffffff;
+  transition: all 100ms linear/ease-in-out;
 }
 .row {
   margin-left: 20px;
